--- a/README.Rmd
+++ b/README.Rmd
@@ -59,7 +59,7 @@ Define an S4 object of class `ORA` (stands for Over-Representation Analysis), ru
 ```{r}
 ora_model <- ORA(
   gmt = geneSet,
-  testData = selectDf$select, 
+  element_names = selectDf$select, 
   pool = poolDf$pool,
   adjustMethod = "PT",
   number_of_permutations = 1000
@@ -113,7 +113,7 @@ Define an S4 object of class `RankedBasedTest`, run ranked based test (Subramani
 ```{r}
 ranked_model <- GSEA(
   gmt = geneSet,
-  testData = selectDf$select,
+  element_names = selectDf$select,
   element_scores = selectDf$score
 )
 
